<resources>
    <string name="app_name">Cynema</string>
    <string name="cynema_logo_content_description">Cynema Logo</string>
    <string name="cynema_logo_image">Cynema Logo Image</string>
    <string name="text_welcome">Welcome to cynema</string>
    <string name="text_access_account">Access your account to use all the resources.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_fragment_name">Sign In</string>
    <string name="sign_up_fragment_name">Sign Up</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_in_with_facebook">Sign in With Facebook</string>
    <string name="or_continue_with">or continue with</string>
    <string name="or_signup_with">or signup with</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_terms_and_conditions">By signing in, you agree to our <a href="https://cynema.info/index.php/terms-of-use-for-the-cynema-app/">Terms of Service</a> and <a href="https://cynema.info/index.php/privacy-policy/">Privacy Policy</a>.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_1_number">At least 1 number</string>
    <string name="upper_and_lower_case_letters">Upper and lower case letters</string>
    <string name="password_char_rules">Password must contain at least one lower case letter, one upper case letter &amp; one number.</string>
    <string name="sign_up_terms_and_conditions">By registering, you are agreeing with our <a href="https://cynema.info/index.php/terms-of-use-for-the-cynema-app/">Terms of Use</a> and <a href="https://cynema.info/index.php/privacy-policy/">Privacy Policy</a>.</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_forgot_password_subtitle">Enter your email and we’ll send you a link to reset your password.</string>
    <string name="send_email_illustration_content_description">Send email Illustration</string>
    <string name="cancel">Cancel</string>
    <string name="send_email">Send Email</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="profile">Profile</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="lets_relax_and_talk">Let’s relax and talk about movies!</string>
    <string name="searchbar_hint">Search movie…</string>
    <string name="categories">Categories</string>
    <string name="email_field_is_empty">Insert a valid email!</string>
    <string name="password_field_is_empty">Insert a password!</string>
    <string name="password_should_have_more_than_8_char">Your password should have more than 8 characters</string>
    <string name="confirm_password_field_is_empty">Insert a confirm password!</string>
    <string name="password_do_not_match">Password don\'t match!</string>
    <string name="sign_up_with_successfully">Successfully Registered!</string>
    <string name="auth_with_successfully">Authenticated with Success!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="no_id_token">No ID Token</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue.</string>
    <string name="create_your_account">Create your account!</string>
    <string name="signup_to_get_started">SignUp to get started.</string>
    <string name="signup_with_google">SignUp with Google</string>
    <string name="signup_with_facebook">SignUp with Facebook</string>
    <string name="error">Unknown error.</string>
    <string name="please_insert_a_email">Please, insert a email.</string>
    <string name="please_insert_a_password">Please, insert a password.</string>
    <string name="please_confirm_your_password">Please, confirm your password.</string>
    <string name="the_passwords_do_not_match">The passwords don\'t match</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="post_does_not_exists">Post doesn\'t exists.</string>
    <string name="terms_of_use_and_privacy_policy_did_not_accepted">You cannot continue without accepting our Terms of Use and Privacy Policy</string>
    <string name="one_tap_dialog_was_closed">One-tap dialog was closed.</string>
    <string name="one_tap_encountered_a_network_error">One-tap encountered a network error.</string>
    <string name="couldn_t_get_credential_from_result">Could not get credential from result.</string>
    <string name="all_fields_are_checked">All fields are checked.</string>
    <string name="error_login_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_login_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="error_login_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
    <string name="error_login_invalid_email">Insert a valid email.</string>
    <string name="error_login_wrong_password">Your password is wrong.</string>
    <string name="error_login_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_login_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_login_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this email.</string>
    <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="user_is_not_logged_in">User is not logged in.</string>
    <string name="sent_password_reset_email_with_success">Password reset email sent successfully.</string>
    <string name="about_you">About you</string>
    <string name="lets_create_your_profile">Let’s create your profile.</string>
    <string name="your_first_name">Your first name <font color='#FF9B3F'>*</font></string>
    <string name="your_last_name">Your last name <font color='#FF9B3F'>*</font></string>
    <string name="your_username">Your username <font color='#FF9B3F'>*</font></string>
    <string name="your_biography">Your biography</string>
    <string name="finish">Finish</string>
    <string name="permission_attention_advise">The app needs access to your gallery for this action. Do you want to allow it now?</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_name_is_empty">Insert your first name.</string>
    <string name="post_title_is_empty">Insert the post title.</string>
    <string name="post_body_is_empty">Insert the post body.</string>
    <string name="comment_body_is_empty">Insert the comment body.</string>
    <string name="last_name_is_empty">Insert your last name.</string>
    <string name="username_is_empty">Insert your username.</string>
    <string name="success">Success!</string>
    <string name="profile_updated_with_success">Profile updated with success!</string>
    <string name="comment_created_with_success">Comment created with success!</string>
    <string name="profile_created_with_success">Post created with success!</string>
    <string name="password_is_not_valid">The password isn\'t valid. Please follow the instructions.</string>
    <string name="valid_username_characters">Your should have at least 4 characters, only alphanumerics and underscores.</string>
    <string name="valid_user_biography">Your biography should have max. 240 characters.</string>
    <string name="valid_post_title">Your post title should have at least 4 characters, and max. 80 characters.</string>
    <string name="valid_comment_body">Your comment should have at least 1 character, and max. 256 characters.</string>
    <string name="valid_post_body">Your post body should have at least 8 characters, and max. 256 characters.</string>
    <string name="user_username_already_in_use">This username is already in use.</string>
    <string name="user_username_is_valid">Valid username!</string>
    <string name="home_screen">Home Screen</string>
    <string name="lets_relax_and_watch_a_movie">Let\'s relax, and watch a movie!</string>
    <string name="welcome_name">Welcome, Name! 👋</string>
    <string name="more_info">More Info</string>
    <string name="view_more">View more</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="most_watched">Most Watched</string>
    <string name="movie_post_item">Movie Post Item</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="could_not_reach_the_user_data">Couldn\'t reach the user data.</string>
    <string name="user_data_reached_with_success">User data reached with success!</string>
    <string name="discussion_posts_reached_with_success">Discussion posts reached with success!</string>
    <string name="comments_reached_with_success">Posts reached with success!</string>
    <string name="comment_reached_with_success">Comments reached with success!</string>
    <string name="discussion_posts_was_not_reached">Discussion posts wasn\'t reached.</string>
    <string name="discussion_posts_comment_was_not_reached">Comment wasn\'t reached.</string>
    <string name="welcome">Welcome</string>
    <string name="hi_emoji">👋</string>
    <string name="details">Details</string>
    <string name="discussion">Discussion</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_rate">Movie Rate</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="synopsys">Synopsys</string>
</resources>