<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.forgot_password_activity.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_padding">

        <ImageView
            app:chainUseRtl="true"
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/cynema_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/cynema_logo_image"
            android:src="@drawable/cynema_logo"
            app:layout_constraintBottom_toTopOf="@id/text_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/custom_black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_forgot_password_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cynema_logo" />

        <TextView
            android:id="@+id/text_forgot_password_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_forgot_password_subtitle"
            android:textColor="@color/custom_bold_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/image_illustration_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_password" />

        <ImageView
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@id/email_input_layout"
            android:id="@+id/image_illustration_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send_email_illustration_content_description"
            android:src="@drawable/illustration_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_password_subtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/CustomInputTextLayout"
            android:layout_marginVertical="32dp"
            android:hint="@string/enter_your_email"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/button_send_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_illustration_send"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                style="@style/CustomInputText"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_send_email"
            style="@style/CustomProviderButton"
            android:backgroundTint="@color/color_primary"
            android:text="@string/send_email"
            app:layout_constraintBottom_toTopOf="@id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/CustomProviderButton"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/custom_grey"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_send_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>