<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_padding"
    tools:context=".ui.fragment.home_fragment.HomeFragment">

    <TextView
        android:id="@+id/welcome_user"
        style="@style/CustomSubText"
        android:text="@string/welcome_user"
        app:layout_constraintBottom_toTopOf="@id/lets_relax_and_talk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lets_relax_and_talk"
        style="@style/CustomSubText"
        android:text="@string/lets_relax_and_talk"
        android:textColor="@color/custom_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_user" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_person"
        app:civ_border_color="@color/custom_black"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_user"
        app:layout_constraintBottom_toBottomOf="@id/lets_relax_and_talk"/>

    <TextView
        android:id="@+id/text_categories"
        android:layout_marginTop="32dp"
        style="@style/CustomTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lets_relax_and_talk"
        android:text="@string/categories"/>

</androidx.constraintlayout.widget.ConstraintLayout>