<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_low_grey"
    android:fillViewport="true"
    tools:context=".ui.fragment.sign_up_fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/CustomInputTextLayout"
            android:hint="@string/enter_your_name"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/email_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                style="@style/CustomInputText"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/CustomInputTextLayout"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_your_email"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                style="@style/CustomInputText"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/CustomInputTextLayout"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                style="@style/CustomInputText"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            style="@style/CustomInputTextLayout"
            android:layout_marginVertical="4dp"
            android:hint="@string/confirm_your_password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/check_at_least_8_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                style="@style/CustomInputText"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/check_at_least_8_characters"
            style="@style/CustomVerifyPasswordIcon"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/at_least_8_characters"
            android:src="@drawable/ic_unchecked"
            app:layout_constraintBottom_toTopOf="@id/check_at_least_1_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout" />

        <TextView
            android:id="@+id/check_at_least_8_characters_label"
            style="@style/CustomVerifyPasswordLabel"
            android:text="@string/at_least_8_characters"
            app:layout_constraintBottom_toBottomOf="@id/check_at_least_8_characters"
            app:layout_constraintStart_toEndOf="@id/check_at_least_8_characters"
            app:layout_constraintTop_toTopOf="@id/check_at_least_8_characters" />

        <ImageView
            android:id="@+id/check_at_least_1_number"
            style="@style/CustomVerifyPasswordIcon"
            android:contentDescription="@string/at_least_1_number"
            android:src="@drawable/ic_unchecked"
            app:layout_constraintBottom_toTopOf="@id/check_upper_and_lower_case_letters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_at_least_8_characters" />

        <TextView
            android:id="@+id/check_at_least_1_number_label"
            style="@style/CustomVerifyPasswordLabel"
            android:text="@string/at_least_1_number"
            app:layout_constraintBottom_toBottomOf="@id/check_at_least_1_number"
            app:layout_constraintStart_toEndOf="@id/check_at_least_1_number"
            app:layout_constraintTop_toTopOf="@id/check_at_least_1_number" />

        <ImageView
            android:id="@+id/check_upper_and_lower_case_letters"
            style="@style/CustomVerifyPasswordIcon"
            android:contentDescription="@string/upper_and_lower_case_letters"
            android:src="@drawable/ic_unchecked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_at_least_1_number" />

        <TextView
            android:id="@+id/check_upper_and_lower_case_letters_label"
            style="@style/CustomVerifyPasswordLabel"
            android:text="@string/upper_and_lower_case_letters"
            app:layout_constraintBottom_toBottomOf="@id/check_upper_and_lower_case_letters"
            app:layout_constraintStart_toEndOf="@id/check_upper_and_lower_case_letters"
            app:layout_constraintTop_toTopOf="@id/check_upper_and_lower_case_letters" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:button="@drawable/custom_checkbox"
            android:gravity="top"
            android:paddingStart="4dp"
            android:text="@string/sign_up_terms_and_conditions"
            android:textColor="@color/custom_bold_grey"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_upper_and_lower_case_letters"
            app:useMaterialThemeColors="false"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            style="@style/CustomProviderButton"
            android:backgroundTint="@color/color_primary"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_terms_conditions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>